// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuSummary />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
>
        <div
                className="row"
        >
                <div
                        className="col-6 menu-summary-left"
                >
                        <span>
                                0
                                 items
                        </span>
                </div>
                <div
                        className="col-6 menu-summary-right"
                >
                        
                </div>
        </div>
</div>,
      "className": "menu-summary",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <div
                    className="col-6 menu-summary-left"
          >
                    <span>
                              0
                               items
                    </span>
          </div>
          <div
                    className="col-6 menu-summary-right"
          >
                    
          </div>
</div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-6 menu-summary-left"
>
              <span>
                            0
                             items
              </span>
</div>,
            <div
              className="col-6 menu-summary-right"
>
              
</div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                0
                 items
</span>,
              "className": "col-6 menu-summary-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  0,
                  " items",
                ],
              },
              "ref": null,
              "rendered": Array [
                0,
                " items",
              ],
              "type": "span",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "col-6 menu-summary-right",
            },
            "ref": null,
            "rendered": Array [],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
>
          <div
                    className="row"
          >
                    <div
                              className="col-6 menu-summary-left"
                    >
                              <span>
                                        0
                                         items
                              </span>
                    </div>
                    <div
                              className="col-6 menu-summary-right"
                    >
                              
                    </div>
          </div>
</div>,
        "className": "menu-summary",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
>
            <div
                        className="col-6 menu-summary-left"
            >
                        <span>
                                    0
                                     items
                        </span>
            </div>
            <div
                        className="col-6 menu-summary-right"
            >
                        
            </div>
</div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-6 menu-summary-left"
>
                <span>
                                0
                                 items
                </span>
</div>,
              <div
                className="col-6 menu-summary-right"
>
                
</div>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  0
                   items
</span>,
                "className": "col-6 menu-summary-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    0,
                    " items",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  0,
                  " items",
                ],
                "type": "span",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "col-6 menu-summary-right",
              },
              "ref": null,
              "rendered": Array [],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders the total count of menu items and a list of dietery types along with their counts 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuSummary
    count={1}
    dietaries={
        Object {
            "n!": 2,
            "v": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
>
        <div
                className="row"
        >
                <div
                        className="col-6 menu-summary-left"
                >
                        <span>
                                1
                                 items
                        </span>
                </div>
                <div
                        className="col-6 menu-summary-right"
                >
                        <span>
                                1
                                x 
                                <span
                                        className="dietary"
                                >
                                        v
                                </span>
                        </span>
                        <span>
                                2
                                x 
                                <span
                                        className="dietary"
                                >
                                        n!
                                </span>
                        </span>
                </div>
        </div>
</div>,
      "className": "menu-summary",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <div
                    className="col-6 menu-summary-left"
          >
                    <span>
                              1
                               items
                    </span>
          </div>
          <div
                    className="col-6 menu-summary-right"
          >
                    <span>
                              1
                              x 
                              <span
                                        className="dietary"
                              >
                                        v
                              </span>
                    </span>
                    <span>
                              2
                              x 
                              <span
                                        className="dietary"
                              >
                                        n!
                              </span>
                    </span>
          </div>
</div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-6 menu-summary-left"
>
              <span>
                            1
                             items
              </span>
</div>,
            <div
              className="col-6 menu-summary-right"
>
              <span>
                            1
                            x 
                            <span
                                          className="dietary"
                            >
                                          v
                            </span>
              </span>
              <span>
                            2
                            x 
                            <span
                                          className="dietary"
                            >
                                          n!
                            </span>
              </span>
</div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                1
                 items
</span>,
              "className": "col-6 menu-summary-left",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  1,
                  " items",
                ],
              },
              "ref": null,
              "rendered": Array [
                1,
                " items",
              ],
              "type": "span",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  1
                  x 
                  <span
                                    className="dietary"
                  >
                                    v
                  </span>
</span>,
                <span>
                  2
                  x 
                  <span
                                    className="dietary"
                  >
                                    n!
                  </span>
</span>,
              ],
              "className": "col-6 menu-summary-right",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "v",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    1,
                    "x ",
                    <span
                      className="dietary"
>
                      v
</span>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  1,
                  "x ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "v",
                      "className": "dietary",
                    },
                    "ref": null,
                    "rendered": "v",
                    "type": "span",
                  },
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": "n!",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    2,
                    "x ",
                    <span
                      className="dietary"
>
                      n!
</span>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  2,
                  "x ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "n!",
                      "className": "dietary",
                    },
                    "ref": null,
                    "rendered": "n!",
                    "type": "span",
                  },
                ],
                "type": "span",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
>
          <div
                    className="row"
          >
                    <div
                              className="col-6 menu-summary-left"
                    >
                              <span>
                                        1
                                         items
                              </span>
                    </div>
                    <div
                              className="col-6 menu-summary-right"
                    >
                              <span>
                                        1
                                        x 
                                        <span
                                                  className="dietary"
                                        >
                                                  v
                                        </span>
                              </span>
                              <span>
                                        2
                                        x 
                                        <span
                                                  className="dietary"
                                        >
                                                  n!
                                        </span>
                              </span>
                    </div>
          </div>
</div>,
        "className": "menu-summary",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
>
            <div
                        className="col-6 menu-summary-left"
            >
                        <span>
                                    1
                                     items
                        </span>
            </div>
            <div
                        className="col-6 menu-summary-right"
            >
                        <span>
                                    1
                                    x 
                                    <span
                                                className="dietary"
                                    >
                                                v
                                    </span>
                        </span>
                        <span>
                                    2
                                    x 
                                    <span
                                                className="dietary"
                                    >
                                                n!
                                    </span>
                        </span>
            </div>
</div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-6 menu-summary-left"
>
                <span>
                                1
                                 items
                </span>
</div>,
              <div
                className="col-6 menu-summary-right"
>
                <span>
                                1
                                x 
                                <span
                                                className="dietary"
                                >
                                                v
                                </span>
                </span>
                <span>
                                2
                                x 
                                <span
                                                className="dietary"
                                >
                                                n!
                                </span>
                </span>
</div>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  1
                   items
</span>,
                "className": "col-6 menu-summary-left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    1,
                    " items",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  1,
                  " items",
                ],
                "type": "span",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    1
                    x 
                    <span
                                        className="dietary"
                    >
                                        v
                    </span>
</span>,
                  <span>
                    2
                    x 
                    <span
                                        className="dietary"
                    >
                                        n!
                    </span>
</span>,
                ],
                "className": "col-6 menu-summary-right",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "v",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      1,
                      "x ",
                      <span
                        className="dietary"
>
                        v
</span>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    1,
                    "x ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "v",
                        "className": "dietary",
                      },
                      "ref": null,
                      "rendered": "v",
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": "n!",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      2,
                      "x ",
                      <span
                        className="dietary"
>
                        n!
</span>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    2,
                    "x ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "n!",
                        "className": "dietary",
                      },
                      "ref": null,
                      "rendered": "n!",
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
